force-app/main/default/objects/DadosBancarios__c/DadosBancarios__c.object-meta.xml
<CustomObject>
    <label>Dados Bancários</label>
    <nameField>
        <displayFormat>DB-{0000}</displayFormat>
        <label>Nome de Dados Bancários</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dados Bancários</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>