force-app/main/default/objects/DadosBancarios__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <label>Agência</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>