force-app/main/default/objects/DadosBancarios__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>Caixa Econômica Federal</fullName>
            </value>
            <value>
                <fullName>Itaú</fullName>
            </value>
            <value>
                <fullName>Santander</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>