force-app/main/default/objects/DadosBancarios__c/fields/NumeroConta__c.field-meta.xml
<CustomField>
    <fullName>NumeroConta__c</fullName>
    <label>Número da Conta</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>